make sure all the inline buttons are aligned top.

--- a/themes/dfs_admin/css/dfs_admin.css
+++ b/themes/dfs_admin/css/dfs_admin.css
@@ -11,3 +11,7 @@
 .node-form .form-actions .button {
   margin-bottom: 10px;
 }
+
+.node-form .form-actions dropbutton-wrapper {
+  vertical-align: top;
+}
